--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,3 +49,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
+        env:
+          OPENWEATHER_KEY: ${{ secrets.OPENWEATHER_KEY}}
+          RAPIDAPI_KEY: ${{ secrets.RAPIDAPI_KEY}}
