--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+env:
+  OPENWEATHER_KEY: ${{ secrets.OPENWEATHER_KEY}}
+  RAPIDAPI_KEY: ${{ secrets.RAPIDAPI_KEY}}
 
 jobs:
   build:
