--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,10 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
 
+    env:
+      OPENWEATHER_KEY: ${{ secrets.OPENWEATHER_KEY}}
+      RAPIDAPI_KEY: ${{ secrets.RAPIDAPI_KEY}}
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
@@ -22,11 +26,14 @@ jobs:
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
 
+      - name: Generate Environment File
+        run: |
+    echo "export const environment = {" > env.js
+    echo "  VITE_OPENWEATHER_KEY: '${OPENWEATHER_KEY}'," >> env.js
+    echo "  VITE_RAPIDAPI_KEY: '${RAPIDAPI_KEY}'" >> env.js
+    echo "};" >> env.js
       - name: Build project
         run: npm run build
-        env:
-          OPENWEATHER_KEY: ${{ secrets.OPENWEATHER_KEY}}
-          RAPIDAPI_KEY: ${{ secrets.RAPIDAPI_KEY}}
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v2
