--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,19 +9,11 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-<<<<<<< HEAD
 
     env:
       OPENWEATHER_KEY: ${{ secrets.OPENWEATHER_KEY}}
       RAPIDAPI_KEY: ${{ secrets.RAPIDAPI_KEY}}
 
-=======
-    
-    env:
-        OPENWEATHER_KEY: ${{ secrets.OPENWEATHER_KEY}}
-        RAPIDAPI_KEY: ${{ secrets.RAPIDAPI_KEY}}
-    
->>>>>>> c71fb7a490d18b6ac9b4c884e3845f512d1b6408
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
@@ -34,22 +26,18 @@ jobs:
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
 
-      - name: Generate Environment File
-        run: |
-    echo "export const environment = {" > env.js
-    echo "  VITE_OPENWEATHER_KEY: '${OPENWEATHER_KEY}'," >> env.js
-    echo "  VITE_RAPIDAPI_KEY: '${RAPIDAPI_KEY}'" >> env.js
-    echo "};" >> env.js
       - name: Build project
         run: npm run build
-<<<<<<< HEAD
-=======
-        
+
       - name: Print Secrets
         run: |
           echo "OpenWeather Key: $OPENWEATHER_KEY"
           echo "RapidAPI Key: $RAPIDAPI_KEY"
->>>>>>> c71fb7a490d18b6ac9b4c884e3845f512d1b6408
+
+      - name: Print Secrets
+        run: |
+          echo "OpenWeather Key: $OPENWEATHER_KEY"
+          echo "RapidAPI Key: $RAPIDAPI_KEY"
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v2
