--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,10 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    
+    env:
+      OPENWEATHER_KEY: ${{ secrets.OPENWEATHER_KEY}}
+      RAPIDAPI_KEY: ${{ secrets.RAPIDAPI_KEY}}
 
     steps:
       - name: Checkout repo
@@ -35,6 +39,11 @@ jobs:
     name: Deploy
     needs: build
     runs-on: ubuntu-latest
+
+    env:
+      OPENWEATHER_KEY: ${{ secrets.OPENWEATHER_KEY}}
+      RAPIDAPI_KEY: ${{ secrets.RAPIDAPI_KEY}}
+    
     if: github.ref == 'refs/heads/main'
 
     steps:
